; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_nodeFuncs.c_planstate_walk_members.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_nodeFuncs.c_planstate_walk_members.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32, i32 (...)*, i8*)* @planstate_walk_members to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @planstate_walk_members(i32** %0, i32 %1, i32 (...)* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32 (...)*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 (...)* %2, i32 (...)** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %28, %4
  %12 = load i32, i32* %10, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %31

15:                                               ; preds = %11
  %16 = load i32 (...)*, i32 (...)** %8, align 8
  %17 = load i32**, i32*** %6, align 8
  %18 = load i32, i32* %10, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32*, i32** %17, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = bitcast i32 (...)* %16 to i32 (i32*, i8*, ...)*
  %24 = call i32 (i32*, i8*, ...) %23(i32* %21, i8* %22)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %15
  store i32 1, i32* %5, align 4
  br label %32

27:                                               ; preds = %15
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %10, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %10, align 4
  br label %11

31:                                               ; preds = %11
  store i32 0, i32* %5, align 4
  br label %32

32:                                               ; preds = %31, %26
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
